# serial-mcp-toolkit

./: .gitignore  README.en.md  README.md  mcp-uart-bugs.md  plugin.toml  pyproject.toml  test_from_users.bat  test_paths.py  test_smoke.py
docs/: MEMORIA.md  session.md
src/uart_mcp/: __init__.py  checksums.py  config.py  connection.py  encodings.py  errors.py  project.py  putty.py  security.py  server.py  validators.py
tests/: test_checksums.py  test_config.py  test_connection.py  test_encodings.py  test_errors.py  test_security.py  test_server_imports.py  test_validators.py
utils/: REFERENCIAS.md  config.example.ini
utils/scripts/: backup.py  list_ports.py  open_putty.py
