[project]
name = "uart-mcp"
version = "1.0.0"
description = "MCP Universal for serial port device control"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "pyserial>=4.0",
    "pyyaml>=6.0",
]

[project.scripts]
uart-mcp = "uart_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]